--- a/templates/ntp.conf.j2
+++ b/templates/ntp.conf.j2
@@ -5,7 +5,8 @@ driftfile /var/lib/ntp/drift
 
 # Permit time synchronization with our time source, but do not
 # permit the source to query or modify the service on this system.
-restrict default nomodify notrap nopeer noquery
+restrict -4 default nomodify notrap nopeer noquery
+restrict -6 default nomodify notrap nopeer noquery
 
 # Permit all access over the loopback interface.  This could
 # be tightened as well, but to do so would effect some of
