--- a/templates/ntp.conf.j2
+++ b/templates/ntp.conf.j2
@@ -20,7 +20,7 @@ restrict ::1
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
 {% for server in ntp_servers %}
-server {{ server }}
+server {{ server }} iburst
 {% endfor %}
 
 #broadcast 192.168.1.255 autokey	# broadcast server
